<resources>
    <string name="app_name">Meet&amp;Run</string>
    <string name="meeting_list_label">Meeting List</string>
    <string name="mymeetings_label">My Meetings</string>
    <string name="register_label">Register</string>
    <string name="edit_meeting_label">Edit Meeting</string>
    <string name="create_meeting_label">Create Meeting</string>
    <string name="meeting_info_label">Meeting Information</string>
    <string name="start_meeting_label">Start meeting</string>
    <string name="not_start_meeting_label">The meeting is not available</string>
    <string name="leave_meeting_label">Leave meeting</string>
    <string name="leave_meeting_message">Are you sure you want to leave the meeting?</string>
    <string name="friends_label">Friends</string>
    <string name="new_group_label">New group</string>
    <string name="users_label">Users</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="meeting_friends_label">Select friends</string>
    <string name="hour">Hour</string>
    <string name="meeting_name">Meeting name</string>
    <string name="minimum_level">Minimum level</string>
    <string name="meeting_description">Meeting description</string>
    <string name="empty_create_error">You left some important fields empty. You MUST fill name, level, date, hour and meeting location.</string>
    <string name="big_name_error">Name of the meeting should be shorter than 100 characters.</string>
    <string name="big_description_error">Description of the meeting should be shorter than 500 characters.</string>
    <string name="location">Your last known location</string>
    <string name="meeting_location">Location of the meeting</string>
    <string name="create_button">Create</string>
    <string name="public_meeting">Public</string>
    <string name="private_meeting">Private</string>
    <string name="location_button">Location</string>
    <string name="public_friends">Do you want to add some friends in this meeting?</string>
    <string name="private_friends">Do you want to run with friends, or alone?</string>
    <string name="public_yes_friends">Yes, I want to add friends</string>
    <string name="public_no_friends">No, just create it</string>
    <string name="private_yes_friends">I want to add friends</string>
    <string name="private_no_friends">I want to run alone</string>
    <string name="edit_meeting_close_dialog_message">Are you sure you want to close without saving?</string>
    <string name="edit_meeting_close_dialog_title">Closing without saving</string>
    <string name="friend_request_dialog_message">Are you sure you want to send a friend request to</string>
    <string name="friend_request_dialog_title">Friend request</string>
    <string name="delete_friend_dialog_message">Are you sure you want to stop being friends with</string>
    <string name="delete_friend_dialog_title">Stop being friends</string>
    <string name="delete_account_message">Are you sure you want to delete your account?</string>
    <string name="delete_account_title">Delete account</string>
    <string name="chat_delete_chat_message">Are you sure you want to delete this chat?</string>
    <string name="chat_delete_chat_title">Delete chat</string>
    <string name="chat_friend_dialog_message">Are you sure you want to send a message to</string>
    <string name="chat_friend_dialog_title">Chat with</string>
    <string name="ok">OK</string>
    <string name="accept_request">Send request</string>
    <string name="cancel">Cancel</string>
    <string name="is_public">Public</string>
    <string name="edit_meeting_error_dialog_title">Error editing the Meeting</string>
    <string name="edit_meeting_error_dialog_message">There was an error while processing the edited Meeting, check if the values are correct!</string>
    <string name="level">Level</string>
    <string name="change_location">Change location</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="change_date">Change date</string>
    <string name="change_time">Change time</string>
    <string name="edit_meeting">Edit meeting</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="button_edit_password">Change Password</string>
    <string name="user_added_to_meeting">User added to meeting</string>
    <string name="friend_profile_label">Friend profile</string>
    <string name="chat_label">Chats</string>
    <string name="user_profile_label">User profile</string>
    <string name="joined_meeting">Meeting joined successfully!</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="saving">Saving</string>
    <string name="login">Login</string>
    <string name="saving_meeting">Saving Meeting</string>
    <string name="error_loading_meeting">Sorry, there was an error while loading this meeting</string>
    <string name="title_activity_tracking">Tracking</string>
    <string name="saving_tracking_data">Saving tracking data</string>
    <string name="getting_current_session">Entering in your account</string>
    <string name="tracking_error_toast_message">There was an error saving the tracking data!</string>
    <string name="tracking_error_loading">There was an error loading the tracking!</string>
    <string name="error_connecting_google_reconnect">Error connecting with the Google API, trying to reconnect</string>
    <string name="error_connecting_google">Could not connect with Google</string>
    <string name="vertical_ellipsis" translatable="false">&#8942;</string>
    <string name="user_name">There was an error authorizing this request</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="post_code">Postal Code</string>
    <string name="save_changes">Save</string>
    <string name="error_edit_profile">Sorry, there was an error while updating your profile</string>
    <string name="current_password">Your current password:</string>
    <string name="new_password">Introduce your new password:</string>
    <string name="repeat_new_password">Introduce again your new password:</string>
    <string name="error_change_pass">Sorry, there was an error while changing your password</string>
    <string name="action_change_pass">Change password</string>
    <string name="level_too_high">The meeting level is higher than yours </string>
    <string name="log_out">Log out</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="configuration">Configuration</string>
    <string name="settings">Settings</string>
    <string name="help_and_suggestions">Help and suggestions</string>
    <string name="meetings">Meetings</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="past_meetings_fragment_title">Past meetings</string>
    <string name="statistics_fragment_title">Statistics</string>
    <string name="trophies_fragment_title">Trophies</string>
    <string name="statistics_title">Statistics</string>
    <string name="avg_speed">Average speed</string>
    <string name="rhythm">Rhythm</string>
    <string name="max_speed">Maximum speed</string>
    <string name="min_speed">Minimum speed</string>
    <string name="max_time">Maximum time</string>
    <string name="min_time">Minimum time</string>
    <string name="max_length">Maximum distance run</string>
    <string name="min_length">Minimum distance run</string>
    <string name="total_steps">Total number of steps</string>
    <string name="total_meetings">Completed meetings</string>
    <string name="total_km">Total distance (in Km)</string>
    <string name="total_m">Total distance (in m)</string>
    <string name="total_time">Total run time</string>
    <string name="aaa">TEST</string>
    <string name="add_user_to_group">+ Add another user</string>
    <string name="number_of_users">Number of users</string>
    <string name="loading_list">The list is loading, try again</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="new_message_notification_placeholder_text_template" translatable="false">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="challenges">Challenges</string>
    <string name="challenge">Challenge</string>
    <string name="create_challenge">Create challenge</string>
    <string name="ends_in_days_hours_minutes">Ends in %1$d days %2$d hours %3$d minutes</string>
    <string name="ends_in_hours_minutes">Ends in %1$d hours %2$d minutes</string>
    <string name="you">You</string>
    <string name="challenge_progress_km">%1$.2f of %2$.2f km completed (%3$.2f %4$s)</string>
    <string name="error_loading">Sorry, there was an error while loading this view</string>
    <string name="saving_challenge">Saving challenge</string>
    <string name="error_saving_challenge">Sorry, there was an error while saving this challenge</string>
    <string name="distance">Distance</string>
    <string name="deadline">Deadline</string>
    <string name="to_challenge">Challenge</string>
    <string name="authorization_error">There was an error authorizing this request</string>
    <string name="not_found_error">The resource was not found</string>
    <string name="loading">Loading</string>
    <string name="loading_challenge">Loading challenge</string>
    <string name="ended_in_days_hours_minutes">Ended %1$d days %2$d hours %3$d minutes ago</string>
    <string name="ended_in_hours_minutes">Ended %1$d hours %2$d minutes ago</string>
    <string name="params_error">There are missing parameters or with incorrect format</string>
    <string name="forbidden_error">This action is forbidden</string>
    <string name="calories">Total consumed calories</string>
    <string name="tracking_steps">%1$d steps</string>
    <string name="tracking_distance">%1$.2f m</string>
    <string name="tracking_speed">%1$.2f m/s</string>
    <string name="tracking_calories">%1$.2f kcal</string>
    <string name="max_level">Max. Level: </string>
    <string name="chat_not_available">The chat is not available</string>
    <string name="new_challenge">New challenge</string>
    <string name="new_challenge_text">%1$s has challenged you</string>
    <string name="challenge_accepted">Challenge accepted</string>
    <string name="ranking_postcode">Zip</string>
    <string name="ranking_city">City</string>
    <string name="ranking_country">Country</string>
    <string name="ranking_global">Global</string>
    <string name="filter_ranking">Filter by:</string>
    <string name="rankings_zip">ZIP rankings</string>
    <string name="rankings_users">User rankings</string>
</resources>