<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/meetings"
            android:icon="@drawable/add_group_512"
            android:title="@string/meetings" />
        <item
            android:id="@+id/mymeetings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/mymeetings_label" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/friends"
            android:title="@string/friends_label" />

        <item
            android:id="@+id/chat"
            android:icon="@drawable/chat"
            android:title="@string/chat_label" />

        <item
            android:id="@+id/challenges"
            android:icon="@drawable/ic_challenge"
            android:title="@string/challenges"
            />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/exit"
            android:title="@string/log_out" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

    <item android:title="@string/configuration">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/help"
                android:icon="@drawable/help"
                android:title="@string/help_and_suggestions" />
        </menu>
    </item>

</menu>
