<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.upc.fib.meetnrun.views.fragments.EditProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:labelFor="@+id/userName"
            android:layout_marginTop="10dp"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/userName_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:inputType="text"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/userName_label"/>

        <TextView
            android:id="@+id/firstName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:labelFor="@+id/firstName"
            android:layout_below="@+id/userName_edit"
            android:layout_marginTop="10dp"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/firstName_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:inputType="text"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/firstName_label"/>

        <TextView
            android:id="@+id/lastName_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/firstName_edit"
            android:labelFor="@+id/lastName"
            android:layout_marginTop="10dp"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/lastName_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:inputType="text"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/lastName_label"/>

        <TextView
            android:id="@+id/postCode_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/lastName_edit"
            android:labelFor="@+id/postCode"
            android:layout_marginTop="10dp"
            android:text="@string/post_code" />

        <EditText
            android:id="@+id/postCode_edit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/postCode_label" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/postCode_edit"/>

    </RelativeLayout>


</ScrollView>
