<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginTop="30px"
                android:textStyle="bold"
                android:text="@string/user_name"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="30px"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/levelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30px"
                    android:textStyle="bold"
                    android:textSize="70px"
                    android:text="@string/level"/>
                <TextView
                    android:id="@+id/level"
                    android:layout_marginLeft="50px"
                    android:textSize="70px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/percentLevel"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </ProgressBar>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="50px"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nMeetingTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30px"
                    android:textStyle="bold"
                    android:textSize="50px"
                    android:text="@string/total_meetings"/>
                <TextView
                    android:id="@+id/nMeetings"
                    android:layout_marginLeft="50px"
                    android:textSize="50px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/percentMeetings"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </ProgressBar>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="50px"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/totalKmTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30px"
                    android:textStyle="bold"
                    android:textSize="40px"
                    android:text="@string/total_km"/>

                <TextView
                    android:id="@+id/totalKm"
                    android:layout_marginLeft="50px"
                    android:textSize="50px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ProgressBar
                android:id="@+id/percentKm"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </ProgressBar>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="60px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/nStepsTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30px"
                    android:textStyle="bold"
                    android:text="@string/total_steps"/>
                <TextView
                    android:id="@+id/nSteps"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/totalTimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="30px"
                    android:text="@string/total_time"/>
                <TextView
                    android:id="@+id/totalTime"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/caloriesTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="30px"
                    android:text="@string/calories"/>
                <TextView
                    android:id="@+id/calories"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/avgSpeedTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="30px"
                    android:text="@string/avg_speed"/>
                <TextView
                    android:id="@+id/avgSpeed"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/rhythmTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="30px"
                    android:text="@string/rhythm"/>
                <TextView
                    android:id="@+id/rhythm"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/maxSpeedTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginLeft="30px"
                    android:text="@string/max_speed"/>
                <TextView
                    android:id="@+id/maxSpeed"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/minSpeedTV"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/min_speed"/>
                <TextView
                    android:id="@+id/minSpeed"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/maxTimeTV"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/max_time"/>
                <TextView
                    android:id="@+id/maxTime"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/minTimeTV"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/min_time"/>
                <TextView
                    android:id="@+id/minTime"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/maxLengthTV"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/max_length"/>
                <TextView
                    android:id="@+id/maxLength"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/minLengthTV"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/min_length"/>
                <TextView
                    android:id="@+id/minLength"
                    android:layout_marginLeft="30px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>